# crates

device_info_znl/: Cargo.toml
device_info_znl/src/: lib.rs
device_info_znl/src/modules/: hostname.rs  mod.rs  systeminfo.rs  uptime.rs
testing/: Cargo.toml
